tests/miniJava/pos/001289_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( 0 && 0 ) while ( 0 ) { } } }
