tests/miniJava/neg/006755_mutation.MiniJava
class java { int [] public static void Main ( String [ ] java ) { { } } }
